--- a/index.html
+++ b/index.html
@@ -1,117 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap 5!</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <style>
-        @media (min-width: 992px) {
-            .alto-100 {
-                height: 100vh;
-            }
-        }
-    </style>
+    <title>Pagina en GITHUB</title>
 </head>
 
 <body>
-    <main class="container d-flex align-items-center justify-conten-center alto-100">
-        <div class="row">
-            <!-- columna izquierda -->
-            <div class="col-12 col-lg-9">
-                <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <article class="card h-100 bg-success">
-                            <div class="card-body">
-                                <div class="d-flex width: 10px">
-                                    <img src="1.jpg" alt="" class="border border-secondary border-3 rounded-circle width: 10px">
-                                    <div class="ps-3">
-                                        <h6 class="m-0 h6">Silvana Goycochea</h6>
-                                        <p class="m=0 h6">Lorem ipsum</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsam tempora omnis reprehenderit quos quia illo autem eos sunt, harum quae ullam quam tenetur cum blanditiis minima sapiente repellat cumque.</p>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <article class="card h-100 bg-primary">
-                            <div class="card-body">
-                                <div class="d-flex">
-                                    <img src="cunnemariana.jpg" alt="" class="border border-secondary border-3 rounded-circle">
-                                    <div class="ps-3">
-                                        <h6 class="m-0 h6">Silvana Goycochea</h6>
-                                        <p class="m=0 h6">Lorem ipsum</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veniam et officiis neque perferendis ipsum. Voluptatibus iste eveniet ipsam cupiditate. Culpa eligendi tenetur natus, tempore ab quam ad eaque possimus!</p>
-                                    <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsam tempora omnis reprehenderit quos quia illo autem eos sunt, harum quae ullam quam tenetur cum blanditiis minima sapiente repellat cumque.</p>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        <article class="card h-100 bg-warning">
-                            <div class="card-body">
-                                <div class="d-flex mb-3">
-                                    <img src="cunnemariana.jpg" alt="" class="border border-secondary border-3 rounded-circle">
-                                    <div class="ps-3">
-                                        <h6 class="m-0 h6">Silvana Goycochea</h6>
-                                        <p class="m=0 h6">Lorem ipsum</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsam tempora omnis reprehenderit quos quia illo autem eos sunt, harum quae ullam quam tenetur cum blanditiis minima sapiente repellat cumque.</p>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                    <div class="col-12 col-lg-8">
-                        <article class="card h-100 bg-danger">
-                            <div class="card-body">
-                                <div class="d-flex mb-3">
-                                    <img src="cunnemariana.jpg" alt="" class="border border-secondary border-3 rounded-circle">
-                                    <div class="ps-3">
-                                        <h6 class="m-0 h6">Silvana Goycochea</h6>
-                                        <p class="m=0 h6">Lorem ipsum</p>
-                                    </div>
-                                </div>
-                                <div>
-                                    <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veniam et officiis neque perferendis ipsum. Voluptatibus iste eveniet ipsam cupiditate. Culpa eligendi tenetur natus, tempore ab quam ad eaque possimus!</p>
-                                    <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsam tempora omnis reprehenderit quos quia illo autem eos sunt, harum quae ullam quam tenetur cum blanditiis minima sapiente repellat cumque.</p>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </div>
-            <!-- columna derecha -->
-            <div class="col-12 col-lg-3">
-                <article class="card h-100 bg-secondary">
-                    <div class="card-body">
-                        <div class="d-flex mb-3">
-                            <img src="maria.jpg" alt="" class="border border-secondary border-3 rounded-circle">
-                            <div class="ps-3">
-                                <h6 class="m-0 h6">Silvana Goycochea</h6>
-                                <p class="m=0 h6">Lorem ipsum</p>
-                            </div>
-                        </div>
-                        <div>
-                            <p class="h6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel veniam et officiis neque perferendis ipsum. Voluptatibus iste eveniet ipsam cupiditate. Culpa eligendi tenetur natus, tempore ab quam ad eaque possimus!</p>
-                            <p class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsam tempora omnis reprehenderit quos quia illo autem eos sunt, harum quae ullam quam tenetur cum blanditiis minima sapiente repellat cumque.</p>
-                        </div>
-                    </div>
-                </article>
-            </div>
-        </div>
-    </main>
+    <h1>Mi primer pagina de prueba en GITHUB</h1>
 </body>
 
 </html>
